# ambition

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  FEATURES.md  LICENSE  LICENSE-MIT  OVERLAY_MANIFEST.md  OVERNIGHT-TODO.md  README.md  TODO-STORY.md  TODO-character-catalog-and-hall.md  TODO-controllable-entity.md  TODO-drafts.md  TODO.md  archive_agent_source.sh  archive_source.sh  brainstorm.md  build_for_android.sh  build_for_web.sh  build_source_archive.sh  candidate-optimization-ideas.md  crate-remap-idea.md  debug-notes-music.md  deploy_to_steamdeck.sh  edit_map.sh  fix_timestamps.sh  generate_audio_assets.sh  issues.md  main-machine-review.md  music_review.md  profile_sprites.sh  regen_assets.sh  regen_backgrounds.sh  regen_music.sh  regen_pirate_sprites.sh  regen_sfx.sh  regen_sprites.sh  regen_visual_quality_variants.sh  (+9 more)
crates/ambition/: Cargo.toml  MODULES.md
crates/ambition/src/: lib.rs  prelude.rs  provider.rs  session_world.rs
crates/ambition_actors/: Cargo.toml  MODULES.md
crates/ambition_actors/examples/: render_room_geometry.rs
crates/ambition_actors/src/: ability_cooldown.rs  action_scheme.rs  actor.rs  character_roster.rs  cutscene.rs  cutscene_trigger.rs  dev.rs  dialog.rs  equipment.rs  lib.rs  physics.rs  safe_pos_tests.rs  shrine.rs
crates/ambition_app/: Cargo.toml  build.rs
crates/ambition_app/src/: headless.rs  lib.rs
crates/ambition_app/tests/: actor_phase_split.rs  architecture_boundaries.rs  blink_run_reachability.rs  boss_contact_iframes.rs  boss_lifecycle.rs  boss_motion_parity.rs  boss_possession_specials.rs  collision_invariant_oracle.rs  crouch_stability.rs  dash_stability.rs  dive_drill_reachability.rs  duel_arena.rs  enemy_attacks_player.rs  fuzz_random_walker.rs  gravity_room_reachability.rs  gravity_symmetry.rs  gravity_symmetry_room.rs  held_projectile_portal_transit.rs  legacy_runtime_guardrail.rs  movement_axis.rs  player_clone_live.rs  player_phase_split.rs  player_pilots_mount_end_to_end.rs  player_robot_fights_player.rs  plugin_minimal_app.rs  portal_bridge_reachability.rs  portal_floor_bounce_no_fallthrough.rs  portal_lab_usable.rs  portal_reset_preserves_authored.rs  portal_translation_camera_continuity.rs  possession_end_to_end.rs  projectile_portal_transit.rs  replay_fixture_regression.rs  repro_walls.rs  room_spatial_integrity.rs  scripted_gameplay.rs  unified_body_movement.rs  unified_melee.rs
crates/ambition_app/web/: index.html
crates/ambition_asset_manager/: Cargo.toml  MODULES.md
crates/ambition_asset_manager/src/: bevy_integration.rs  id.rs  kind.rs  lib.rs  location.rs  manifest.rs  policy.rs  preload.rs  profile.rs  resolver.rs  sfx_integration.rs
crates/ambition_asset_manager/tests/: end_to_end.rs
crates/ambition_audio/: Cargo.toml  MODULES.md
crates/ambition_audio/src/: bank_asset.rs  catalog.rs  lib.rs  library.rs  mix.rs  output.rs  render.rs  selection.rs  spec.rs  web_unlock.rs
crates/ambition_characters/: Cargo.toml  MODULES.md
crates/ambition_characters/src/: action_scheme.rs  boss_encounter.rs  equipment.rs  lib.rs  perception.rs
crates/ambition_combat/: Cargo.toml  MODULES.md
crates/ambition_combat/src/: authored_volumes.rs  breakables.rs  events.rs  falling_chest.rs  hazard_runtime.rs  hazards.rs  lib.rs  moveset.rs  on_hit.rs  path_motion.rs  slots.rs  targeting.rs  util.rs  variation.rs
crates/ambition_content/: Cargo.toml
crates/ambition_content/src/: audio_registries.rs  banter.rs  character_catalog.rs  content_validation.rs  duel_arena.rs  enemy_roster.rs  falling_sand.rs  lib.rs  music.rs  plugin.rs  quest.rs  worlds.rs
crates/ambition_content/tests/: intro_sprite_catalog.rs
crates/ambition_cutscene/: Cargo.toml  MODULES.md
crates/ambition_cutscene/src/: lib.rs
crates/ambition_dev_tools/: Cargo.toml  MODULES.md
crates/ambition_dev_tools/src/: lib.rs  persistence.rs  profiling.rs  sim_plugin.rs
crates/ambition_dialog/: Cargo.toml  MODULES.md
crates/ambition_dialog/src/: bindings.rs  bridge.rs  content.rs  context.rs  lib.rs  runtime.rs  speech_sfx.rs  systems.rs  tests.rs
crates/ambition_encounter/: Cargo.toml  MODULES.md
crates/ambition_encounter/src/: entity.rs  events.rs  lib.rs  lifecycle.rs  music.rs  objective.rs  participants.rs  registry.rs  rewards.rs  spec.rs  staging.rs  state.rs  timeline.rs  waves.rs
crates/ambition_engine/: Cargo.toml
crates/ambition_engine/src/: abilities.rs  actor.rs  actor_control.rs  attack_choreography.rs  boss_encounter.rs  boss_patterns.rs  character_ai.rs  combat.rs  combat_slots.rs  cutscene.rs  debug.rs  enemy.rs  enemy_control.rs  geometry.rs  interaction.rs  kinematic.rs  ledge_grab.rs  lib.rs  math.rs  movement.rs  music.rs  physics.rs  player_clusters.rs  player_state.rs  projectile.rs  quest.rs  save.rs  scalar.rs  state_machines.rs  surface.rs  world.rs
crates/ambition_engine/tests/: body_shape_fits_at.rs  proptest_foundation.rs  resource_meter_props.rs  snapshot_foundation.rs  wall_cling_fuzz.rs  wall_jump_fuzz.rs
crates/ambition_engine_core/: Cargo.toml  MODULES.md
crates/ambition_engine_core/src/: abilities.rs  body_clusters.rs  cast.rs  collision_semantics.rs  combat_volume.rs  config.rs  confirmed_frame.rs  content_epoch.rs  control_frame.rs  frame.rs  geo_id.rs  geometry.rs  (+12 more)
crates/ambition_entity_catalog/: Cargo.toml  MODULES.md
crates/ambition_game_shell/: Cargo.toml  MODULES.md
crates/ambition_gameplay_trace/: Cargo.toml  MODULES.md
crates/ambition_host/: Cargo.toml  MODULES.md
crates/ambition_input/: Cargo.toml  MODULES.md
crates/ambition_interaction/: Cargo.toml  MODULES.md
crates/ambition_inventory_ui/: Cargo.toml  MODULES.md
crates/ambition_items/: Cargo.toml  MODULES.md
crates/ambition_ldtk_map/: Cargo.toml  MODULES.md
crates/ambition_load/: Cargo.toml  MODULES.md
crates/ambition_load_presentation/: Cargo.toml  MODULES.md
crates/ambition_menu/: Cargo.toml  MODULES.md
crates/ambition_persistence/: Cargo.toml  MODULES.md
crates/ambition_platformer_primitives/: Cargo.toml  MODULES.md
crates/ambition_platformer_provider/: Cargo.toml  MODULES.md
(+4453 files in other folders)
