[workspace]
members = [
    "crates/ambition_characters",
    "game/ambition_app",
    "crates/ambition_asset_manager",
    "crates/ambition_audio",
    "crates/ambition_combat",
    "game/ambition_content",
    "crates/ambition_cutscene",
    "crates/ambition_dev_tools",
    "crates/ambition_dialog",
    "crates/ambition_entity_catalog",
    "crates/ambition_encounter",
    "crates/ambition_vfx",
    "crates/ambition_engine_core",
    "crates/ambition_input",
    "crates/ambition_interaction",
    "crates/ambition_items",
    "crates/ambition_inventory_ui",
    "crates/ambition_ldtk_map",
    "crates/ambition_menu",
    "crates/ambition_persistence",
    "crates/ambition_platformer_primitives",
    "crates/ambition_portal",
    "crates/ambition_projectiles",
    "crates/ambition_render",
    "crates/ambition_settings_menu",
    "crates/ambition_portal_presentation",
    "crates/ambition_actors",
    "crates/ambition_runtime",
    "crates/ambition_host",
    "crates/ambition_sfx",
    "crates/ambition_sim_view",
    "crates/ambition_sfx_bank",
    "crates/ambition_sprite_sheet",
    "crates/ambition_time",
    "crates/ambition_gameplay_trace",
    "crates/ambition_touch_input",
    "crates/ambition_ui_nav",
    "crates/ambition_world",
    "game/ambition_menu_kaleidoscope",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Jon Crall + ChatGPT + Claude"]
description = "Ambition: a code-generated endgame movement sandbox for a mathematical AI-first platformer."

[profile.android-size]
inherits = "release"
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"


[profile.android-profile]
inherits = "release"
# Optimized like release, but keep enough DWARF in the native library for
# host simpleperf / addr2line to recover Rust function names in Android profiles.
debug = 1
strip = "none"
split-debuginfo = "off"

[profile.dev]
# Optional, but often good for Bevy/game dev:
# optimize your own workspace crates a little without going full release.
opt-level = 1

# Huge disk saver versus full DWARF debug info.
# Keeps useful file/line backtraces.
debug = "line-tables-only"

# Incremental can make target/debug enormous.
# Leave true if you strongly value fast edit-compile cycles;
# set false if disk size is the priority.
incremental = true

[profile.dev.package."*"]
# Optimize registry/git deps like Bevy, wgpu, image codecs, math crates, etc.
opt-level = 3

# Big disk saver for dependencies.
debug = false

# More release-like behavior for dependencies.
debug-assertions = false
overflow-checks = false

[profile.dev.build-override]
# Build scripts / proc macros are separate from normal deps.
# Usually keep these cheap to compile.
opt-level = 0
debug = false
codegen-units = 256
