[workspace]
members = [
    "crates/ambition",
    "crates/ambition_characters",
    "game/ambition_app",
    "game/ambition_demo_mary_o",
    "game/ambition_demo_mary_o_app",
    "game/ambition_demo_sanic",
    "game/ambition_demo_pocket",
    "game/ambition_demo_sanic_app",
    "crates/ambition_asset_manager",
    "crates/ambition_audio",
    "crates/ambition_combat",
    "game/ambition_content",
    "crates/ambition_cutscene",
    "crates/ambition_dev_tools",
    "crates/ambition_dialog",
    "crates/ambition_entity_catalog",
    "crates/ambition_encounter",
    "crates/ambition_vfx",
    "crates/ambition_engine_core",
    "crates/ambition_input",
    "crates/ambition_interaction",
    "crates/ambition_items",
    "crates/ambition_inventory_ui",
    "crates/ambition_ldtk_map",
    "crates/ambition_load",
    "crates/ambition_game_shell",
    "crates/ambition_load_presentation",
    "crates/ambition_menu",
    "crates/ambition_persistence",
    "crates/ambition_platformer_primitives",
    "crates/ambition_platformer_provider",
    "crates/ambition_portal",
    "crates/ambition_projectiles",
    "crates/ambition_render",
    "crates/ambition_sim_harness",
    "crates/ambition_settings_menu",
    "crates/ambition_portal_presentation",
    "crates/ambition_actors",
    "crates/ambition_runtime",
    "crates/ambition_host",
    "crates/ambition_sfx",
    "crates/ambition_sim_view",
    "crates/ambition_sfx_bank",
    "crates/ambition_sprite_sheet",
    "crates/ambition_time",
    "crates/ambition_gameplay_trace",
    "crates/ambition_touch_input",
    "crates/ambition_ui_nav",
    "crates/ambition_world",
    "game/ambition_menu_kaleidoscope",
    "tests/ambition_workspace_policy",
]
# The Phase-6 external-architecture proof: a consumer game that must live
# OUTSIDE the workspace so it exercises exactly what a third-party crate
# would — the `ambition` umbrella via a path dependency, its own lockfile,
# no workspace dependency table, no policy exemptions.
exclude = ["fixtures/external_consumer"]
resolver = "2"

# One version per shared external dependency. Before this table existed, `ron`
# was pinned 0.11 in thirteen manifests and 0.12 in one, and `thiserror` 1 in
# three — so the workspace compiled two copies of each. Add a crate here when a
# second manifest wants it; keep per-crate FEATURE sets in the member manifests
# (they legitimately differ).
#
# NOTE: `bevy` is deliberately NOT here yet. It is pinned in ~46 manifests, each
# with a carefully trimmed and genuinely different feature set (see
# `ambition_menu` for why that matters), so the conversion is its own reviewable
# pass — tracked in docs/planning/tracks.md.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.11"
thiserror = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Jon Crall + ChatGPT + Claude"]
description = "Ambition: a code-generated endgame movement sandbox for a mathematical AI-first platformer."

[profile.android-size]
inherits = "release"
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"


[profile.android-profile]
inherits = "release"
# Optimized like release, but keep enough DWARF in the native library for
# host simpleperf / addr2line to recover Rust function names in Android profiles.
debug = 1
strip = "none"
split-debuginfo = "off"

[profile.dev]
# Optional, but often good for Bevy/game dev:
# optimize your own workspace crates a little without going full release.
opt-level = 1

# Huge disk saver versus full DWARF debug info.
# Keeps useful file/line backtraces.
debug = "line-tables-only"

# Incremental can make target/debug enormous.
# Leave true if you strongly value fast edit-compile cycles;
# set false if disk size is the priority.
incremental = true

[profile.dev.package."*"]
# Optimize registry/git deps like Bevy, wgpu, image codecs, math crates, etc.
opt-level = 3

# Big disk saver for dependencies.
debug = false

# More release-like behavior for dependencies.
debug-assertions = false
overflow-checks = false

[profile.dev.build-override]
# Build scripts / proc macros are separate from normal deps.
# Usually keep these cheap to compile.
opt-level = 0
debug = false
codegen-units = 256

# ────────────────────────── patched dependencies ──────────────────────────
# Crates we consume with a local change that upstream has not released yet.
# Each entry is a TEMPORARY bridge and must name the condition that deletes it.
# Pinned by `rev`, never by branch: a branch would drift silently under
# `cargo update` and make builds unreproducible.
[patch.crates-io]
# Widens `FixedTimestepData` + its `accumulator` to `pub` (two words, no
# behaviour change) so presentation can read the intra-tick phase and draw
# bodies on the render clock. `Time<Fixed>::overstep_fraction()` answers this
# for the plain fixed-tick host; bevy_ggrs banks its own time instead, which is
# why the accumulator is the only truthful source under rollback.
# Branched from the v0.21.0 tag so it stays semver-compatible with the
# `bevy_ggrs = "0.21"` requirement AND on bevy 0.18 — upstream main is 0.22 on
# bevy 0.19, which we are not on.
# Consumer is tagged HACK(ggrs-accumulator). RETIRE when the upstream PR
# releases: drop this entry, bump the requirement, use the released API.
bevy_ggrs = { git = "https://github.com/Erotemic/bevy_ggrs", rev = "da0fafdd5e715a6e0246dc3e0cc88fba0551d0d0" }
